jbpm-prd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: deployment-jbpm-prd-jbpm-prod
  name: jbpm-prod
  namespace: jbpm-prd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-jbpm-prd-jbpm-prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: jbpm-prod.kolanot.com
        run: jbpm-prod.kolanot.com
        workload.user.cattle.io/workloadselector: deployment-jbpm-prd-jbpm-prod
    spec:
      containers:
      - env:
        - name: JBPM_DB_DRIVER
          value: mysql
        - name: JBPM_DB_HOST
          value: 10.10.9.36
        - name: JBPM_DB_NAME
          value: JBPM
        - name: JBPM_DB_PASSWORD
          value: JSHSBsbshdSb!1ssQ
        - name: JBPM_DB_PORT
          value: "3306"
        - name: JBPM_DB_USER
          value: jbpm
        image: jboss/jbpm-server-full:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 50
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 750
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: jbpm-prod
        readinessProbe:
          failureThreshold: 50
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 100
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: "1"
            memory: 4Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
