jbpm-prd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
  name: jbpm-prod
  namespace: jbpm-prd
spec:
  clusterIP: None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-jbpm-prd-jbpm-prod
  sessionAffinity: None
  type: ClusterIP
